# Q4_haxathon2_todoapp_phase_2

./: .gitignore  API_WORKFLOW_EXAMPLE.md  README.md  check_server.py  start-backend.bat  start-frontend.bat  test_functionality.py  test_post_request.py  todo-app-api-collection.json
.specify/memory/: constitution.md
backend/: alembic.ini  debug_env.py  main.py  requirements.txt  test_jwt_fix.py  vercel.json
backend/api/: index.py  pyproject.toml
backend/migrations/: env.py  initial_migration.py
backend/migrations/versions/: 001_initial.py
backend/src/ai/: chat_processor.py  openai_client.py
backend/src/api/: auth.py  chat.py  tasks.py
backend/src/database/: __init__.py  database.py  optimization.py
backend/src/mcp/: server.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py  conversation.py  task.py  user.py
backend/src/services/: auth_service.py  task_service.py
backend/src/utils/: api_responses.py  datetime_utils.py  jwt_handler.py  logger.py
backend/tests/e2e/: test_e2e_flow.py
backend/tests/integration/: test_auth_api.py
backend/tests/unit/: test_models.py
frontend/: package.json  tailwind.config.js
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: menu.py
src/database/: database.py
src/lib/: utils.py
src/models/: task.py
src/services/: task_service.py
tests/integration/: test_cli_integration.py
tests/unit/: test_task.py  test_task_service.py
(+43 files in other folders)
